diagnostics/architecture-transform-error.txt
Traceback (most recent call last):
  File "C:\actions-runner\_work\_temp\fc7b580c-41c6-413a-a22a-e86182c4d4b7.py", line 15, in <module>
    exec(compile(script, str(source_path), 'exec'), {'__name__': '__main__'})
         ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File ".github\workflows\apply-architecture-source-transforms.yml", line 1
    name: Apply architecture source transforms
             ^
IndentationError: unexpected indent
